[gd_scene load_steps=12 format=3 uid="uid://cgjfavq5blw08"]

[ext_resource type="Script" path="res://Scripts/game_map/poi_scripts/upgrade_altar.gd" id="1_f3f2g"]
[ext_resource type="Theme" uid="uid://liuy3as2gehs" path="res://Fonts/Themes/bigger_dice_game_ui.tres" id="2_nor4a"]
[ext_resource type="Theme" uid="uid://g7xlk0plmj00" path="res://Fonts/Themes/dice_game_ui.tres" id="3_1b7hl"]
[ext_resource type="FontFile" uid="uid://cw706bl4vj4uf" path="res://Fonts/Dungeon Depths.otf" id="4_esf84"]
[ext_resource type="Texture2D" uid="uid://ba5fohkagawd8" path="res://Sprites/dice_game_ui/close X.png" id="5_i14cc"]
[ext_resource type="Texture2D" uid="uid://b7bakf1xgyypw" path="res://Sprites/Dice_battle_assets/die circle.png" id="6_d5hx5"]
[ext_resource type="Script" path="res://Scripts/dice_game/dice_holder.gd" id="7_fdxtk"]
[ext_resource type="Script" path="res://Scripts/shop/shop_container.gd" id="8_nxin3"]
[ext_resource type="PackedScene" uid="uid://c21j8rpl4tpqr" path="res://Prefabs/game_ui/ui_item_desciption.tscn" id="9_ch7x2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ygc8y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t186t"]
size = Vector2(376, 396)

[node name="upgrade_altar" type="Node2D" node_paths=PackedStringArray("ui_item_description")]
script = ExtResource("1_f3f2g")
ui_item_description = NodePath("ui_item_desciption")

[node name="game Visuals TEMP2" type="ColorRect" parent="."]
offset_left = -3.0
offset_top = -5.0
offset_right = 1158.0
offset_bottom = 650.0
color = Color(1, 0.658824, 0.658824, 1)

[node name="Title" type="RichTextLabel" parent="."]
offset_left = 201.0
offset_top = 10.0
offset_right = 947.0
offset_bottom = 80.0
theme = ExtResource("2_nor4a")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]upgrade altar"

[node name="circle description" type="RichTextLabel" parent="."]
offset_left = -58.0
offset_top = 413.0
offset_right = 520.0
offset_bottom = 544.0
theme = ExtResource("3_1b7hl")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
bbcode_enabled = true
text = "[center]place dice here to upgrade"

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 147.0
offset_top = 429.0
offset_right = 290.0
offset_bottom = 474.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_esf84")
theme_override_font_sizes/font_size = 20
text = "submit"
flat = true

[node name="player_ui" type="Node2D" parent="."]

[node name="close" type="TextureButton" parent="player_ui"]
offset_left = 1093.0
offset_top = 7.0
offset_right = 1315.0
offset_bottom = 234.0
scale = Vector2(0.23, 0.23)
focus_mode = 0
texture_normal = ExtResource("5_i14cc")

[node name="upgrade circles" type="Node2D" parent="."]

[node name="slot_1" type="Sprite2D" parent="upgrade circles"]
position = Vector2(135.5, 327.5)
texture = ExtResource("6_d5hx5")

[node name="dholder_hand" type="Area2D" parent="upgrade circles/slot_1" groups=["dice_snap"]]
script = ExtResource("7_fdxtk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="upgrade circles/slot_1/dholder_hand"]
shape = SubResource("RectangleShape2D_ygc8y")

[node name="slot_2" type="Sprite2D" parent="upgrade circles"]
position = Vector2(306.5, 327.5)
texture = ExtResource("6_d5hx5")

[node name="dholder_hand" type="Area2D" parent="upgrade circles/slot_2" groups=["dice_snap"]]
script = ExtResource("7_fdxtk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="upgrade circles/slot_2/dholder_hand"]
shape = SubResource("RectangleShape2D_ygc8y")

[node name="slot_3" type="Sprite2D" parent="upgrade circles"]
position = Vector2(221.5, 185.5)
texture = ExtResource("6_d5hx5")

[node name="dholder_hand" type="Area2D" parent="upgrade circles/slot_3" groups=["dice_snap"]]
script = ExtResource("7_fdxtk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="upgrade circles/slot_3/dholder_hand"]
shape = SubResource("RectangleShape2D_ygc8y")

[node name="player_inventory" type="Node2D" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="player_inventory"]
offset_left = 748.0
offset_top = 134.0
offset_right = 1139.0
offset_bottom = 544.0

[node name="GridContainer" type="GridContainer" parent="player_inventory/PanelContainer"]
layout_mode = 2
columns = 3
script = ExtResource("8_nxin3")
trade_side = "discard"

[node name="inventory" type="Area2D" parent="player_inventory" groups=["dice_snap"]]
position = Vector2(953, 331)
script = ExtResource("7_fdxtk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_inventory/inventory"]
position = Vector2(-8, 8)
shape = SubResource("RectangleShape2D_t186t")

[node name="dice_layer" type="Node2D" parent="."]

[node name="ui_item_desciption" parent="." instance=ExtResource("9_ch7x2")]
visible = false
offset_left = 368.0
offset_top = 86.0
offset_right = 880.0
offset_bottom = 542.0
scale = Vector2(0.7, 0.7)

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="player_ui/close" to="." method="_on_close_button_down"]
